--- a/app.wxss
+++ b/app.wxss
@@ -29,3 +29,31 @@ padding-left:10rpx;
 .small-num {
   font-size: 24rpx;
 }
+
+
+.flex-center{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-box{
+  display:flex;
+}
+
+.flex-space{
+  justify-content: space-between;
+}
+
+.flex-colomn{
+  flex-direction: column;
+}
+
+.defaultBtn{
+  width:343rpx;
+  height:45rpx;
+  background:linear-gradient(246deg,rgba(248,151,120,1) 0%,rgba(241,75,127,1) 100%);
+  box-shadow:0 2rpx 12rpx 0rpx rgba(241,75,127,0.35);
+  border-radius:23rpx;
+}
+
