--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,116 +1,295 @@
 /**index.wxss**/
 
 page {
-  background: #f7f7f7;
-  height: auto;
+    background: #f7f7f7;
+    height: auto;
 }
-
 
 
 .wx-swiper-dots {
-  margin-bottom: 15rpx;
+    margin-bottom: 15rpx;
 }
 
 .banner-item {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 swiper.pic-swiper .banner {
-  position: absolute;
-  width: 690rpx;
-  margin: 0 10rpx;
-  height: 402rpx;
-  border-radius: 8rpx;
-  display: inline-block;
-  box-shadow: 0 4px 10px 0 rgba(83, 83, 83, 0.288);
+    position: absolute;
+    width: 690rpx;
+    margin: 0 10rpx;
+    height: 402rpx;
+    border-radius: 8rpx;
+    display: inline-block;
+    box-shadow: 0 4px 10px 0 rgba(83, 83, 83, 0.288);
 }
-.container{
-  background: #F1527E;
+
+.container {
+    background: #fff;
 }
+
 .container .bg-sear {
-  width: 100%;
+    width: 100%;
+    background-color:#F1527E;
+    padding-bottom: 36rpx;
+    text-align: center;
+}
 
-  padding-bottom: 36rpx;
-  text-align: center;
+.searchBox {
+    display: flex;
+    justify-content: center;
 }
-.searchBox{
-  display:flex;
-  justify-content: center;
-}
+
 .bg-sear .section {
-  display: flex;
-  align-items: center;
-  height: 68rpx;
-  margin-top:40rpx;
-  border-radius: 50rpx;
-  width: 92%;
-  background: #f7f7f7;
-  padding-left:30rpx;
+    display: flex;
+    align-items: center;
+    height: 68rpx;
+    margin-top: 40rpx;
+    border-radius: 50rpx;
+    width: 92%;
+    background: #f7f7f7;
+    padding-left: 30rpx;
 }
-
 
 
 .bg-sear .section .placeholder {
-  display: block;
-  font-size: 24rpx;
-  color: #999;
+    display: block;
+    font-size: 24rpx;
+    color: #999;
 }
 
 .bg-sear .section .search-img {
-  width: 32rpx;
-  height: 32rpx;
-  margin-right: 10rpx;
+    width: 32rpx;
+    height: 32rpx;
+    margin-right: 10rpx;
 }
 
 /* 分类栏目 */
 
 .content {
-  background: #fff;
-  border-radius:36rpx 36rpx 0 0;
-  height:600px;
-  padding:0 32rpx;
-}
-.content swiper{
-  height:220rpx;
-}
-.content swiper-item{
-  height:auto !important;
-}
-.swiper-Image{
-  width:686rpx;
-  height:220rpx;
-  border-radius:10rpx;
+    background: #fff;
+    border-radius: 36rpx 36rpx 0 0;
+
+    padding: 0 32rpx 40rpx;
 }
 
- .dots{
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  position:relative;
-  top:-100rpx;
+.content swiper {
+    height: 220rpx;
 }
-.dots .dotsRow{
-  display:flex;
+
+.content swiper-item {
+    height: auto !important;
 }
- .dots .dotsRow .active{
-  width:20rpx;
-  height:6rpx;
-  border-radius:6rpx;
-  background:#fff;
-  opacity: .8;
+
+.swiper-Image {
+    width: 686rpx;
+    height: 220rpx;
+    border-radius: 10rpx;
+}
+
+.dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: -20rpx;
+}
+
+.dots .dotsRow {
+    display: flex;
+}
+
+.dots .dotsRow .active {
+    width: 20rpx;
+    height: 6rpx;
+    border-radius: 6rpx;
+    background: #fff;
+    opacity: .8;
 
 }
- .dots .dotsRow .dotsItem{
-   width:20rpx;
-   height:6rpx;
-   border-radius:6rpx;
-   background:#000;
-   opacity: .8;
+
+.dots .dotsRow .dotsItem {
+    width: 20rpx;
+    height: 6rpx;
+    border-radius: 6rpx;
+    background: #000;
+    opacity: .8;
 
 }
- .newPerson{
-    margin-top:48rpx;
-   display:flex;
-   align-items: center;
 
- }
+.newPerson {
+    margin-top: 48rpx;
+}
+
+.newPerson .per-title {
+    font-size: 24rpx;
+    color: #aaa;
+}
+
+.newPerson .t1 {
+    font-size: 32rpx;
+    color: #333;
+    font-weight: 800;
+}
+
+.newPerson .line {
+    margin: 0 10rpx;
+}
+
+.newPerson .more {
+    color: #C7C7C7;
+    font-size: 24rpx;
+}
+
+.newPerson-part {
+    margin-top: 24rpx;
+
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 2rpx 12rpx 0 rgba(0, 0, 0, .08);
+    padding: 32rpx 24rpx;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10rpx;
+}
+
+.newPerson-part .person-box image {
+    width: 200rpx;
+    height: 220rpx;
+    border-radius: 10rpx;
+}
+
+.newPerson-part .person-box .name {
+    color: #333;
+    font-size: 26rpx;
+    font-weight: bold;
+    margin-top: 14rpx;
+    margin-bottom: 10rpx;
+    max-width: 200rpx;
+}
+
+.newPerson-part .person-box .person {
+    color: #aaa;
+    font-size: 24rpx;
+    font-weight: bold;
+}
+
+.newPerson-part .person-box .module {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 8rpx;
+    bottom: 12rpx;
+    left: 12rpx;
+    color: #fff;
+    font-size: 20rpx;
+    padding: 10rpx 10rpx;
+}
+
+
+.match {
+    display: flex;
+    padding: 24rpx;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+}
+
+.match .match-box {
+    width: 300rpx;
+    min-height: 268rpx;
+    border-radius: 12rpx;
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 4rpx 28rpx 0 rgba(0, 0, 0, 0.1);
+    border: 1rpx solid rgba(213, 212, 212, .1);
+    margin-right: 20rpx;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    color: #666666;
+    font-size: 26rpx;
+    padding: 30rpx 0;
+    box-sizing: border-box;
+    font-weight: bold;
+}
+
+.match .match-box .vsLogo {
+    width: 68rpx;
+    height: 68rpx;
+}
+
+.match .match-box .time {
+
+    font-size: 24rpx;
+    color: #aaa;
+}
+
+.favorite {
+    margin-top: 24rpx;
+}
+
+.favorite .imageList .img1 {
+    width: 332rpx;
+    height: 400rpx;
+    border-radius: 10rpx;
+}
+
+.favorite .imageList .img2 {
+    width: 332rpx;
+    height: 440rpx;
+    border-radius: 10rpx;
+}
+
+.imageList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    white-space: pre-wrap;
+    margin-top: 32rpx;
+
+}
+
+.imageList .module1 {
+    position: absolute;
+    bottom:100rpx;
+    left: 20rpx;
+
+}
+
+.imageList .module2 {
+    position: absolute;
+    bottom: 20rpx;
+    left: 20rpx;
+
+}
+
+.imageList .module1 .lvLogo, .module2 .lvLogo {
+    width: 88rpx;
+    height: 32rpx;
+    margin-left:16rpx;
+}
+
+.imageList .module1 .name, .module2 .name {
+    color: #fff;
+    font-size: 22rpx;
+    background:rgba(0,0,0,.4);
+    border-radius:4px;
+    padding:12rpx;
+}
+
+.imageList .module1 .name1,.module2 .name1{
+    color: #fff;
+    font-size: 28rpx;
+    margin-top: 20rpx;
+}
+
+.imageListItem {
+    margin-bottom: 20rpx;
+    position: relative;
+    display:inline-block;
+}
+
+.notMargin {
+    margin: 0rpx;
+}
+
+
