--- a/pages/found/found.wxml
+++ b/pages/found/found.wxml
@@ -10,7 +10,7 @@
             <tab title="{{item.name}}" wx:for="{{categoryList}}"
                  title-style="color:{{activeIndex==index?'#333':'#999999'}};font-weight:{{activeIndex==index?'700':'500'}}"
                  wx:key="{{index}}">
-                <view class="content">
+                <view class="content" wx:if="{{activeIndex==0}}">
                     <view class="list-item" wx:for="{{list}}" wx:key="{{index}}">
                         <!--用户信息-->
                         <view class="flex-box flex-space user">
@@ -64,6 +64,9 @@
                             </view>
                         </view>
                     </view>
+                </view>
+                <view class="content" wx:else>
+
                 </view>
             </tab>
 
