--- a/app.wxss
+++ b/app.wxss
@@ -47,6 +47,9 @@ padding-left:10rpx;
 .flex-around{
   justify-content: space-around;
 }
+.flex-y-center{
+    align-items: center;
+}
 
 .flex-colomn{
   flex-direction: column;
