--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -10,6 +10,7 @@
                 </view>
                 <view>
                     <text>用走心的签名打动对的人</text>
+                    <image src="../../images/icon/editor.png" class="editor"></image>
                 </view>
             </view>
             <view class="userAvatar">
@@ -31,15 +32,34 @@
             </view>
         </view>
     </view>
+
     <view class="content">
+        <!--订单 优惠券和钱包按钮-->
         <view class="list flex-box flex-space">
-            <view style="flex:1" class="flex-center flex-colomn" wx:for="{{list}}">
+            <view style="flex:1" class="flex-center flex-colomn" wx:for="{{list}}" wx:key="index">
                 <image src="{{item.url}}"></image>
                 <view>
                     {{item.text}}
                 </view>
             </view>
         </view>
+        <!--设置列表-->
+        <view class="settingList">
+              <view class="flex-box flex-space list-row" wx:for="{{settingList}}" wx:key="index">
+                  <image src="{{item.url}}" class="left-png"></image>
+                  <view class="flex-box flex-space row-item">
+
+                      <text>{{item.text}}</text>
+                      <image src="../../images/icon/right.png" class="right-png"></image>
+                  </view>
+
+              </view>
+        </view>
     </view>
-    <!--end 订单状态 -->
+    <!--陪练按钮-->
+    <view class="flex-center foot">
+        <view class="btn">
+            我想当陪练赚钱
+        </view>
+    </view>
 </view>
