--- a/pages/found/found.wxml
+++ b/pages/found/found.wxml
@@ -18,7 +18,7 @@
                                 <image src="{{item.momentsImgUrl}}" class="headImg"></image>
                                 <view class="userInfo">
                                     <view>{{item.nickName}}</view>
-                                    <view class="flex-box">
+                                    <view class="flex-box" style="margin-top:8rpx;">
                                         <image src="../../images/icon/lady.png" class="lv1"></image>
                                         <view class="lv-box">
                                             <view class="lv-text">LV {{item.skillLevel}}</view>
@@ -28,8 +28,8 @@
                                     </view>
                                 </view>
                             </view>
-                            <view class="{{item.type==1?'trend':'disabledTrend'}} flex-center">
-                                {{item.type==1?'关注':'已关注'}}
+                            <view class="{{item.delFlag==0?'trend': 'disabledTrend'}} flex-center">
+                                {{item.delFlag==0? '关注': '已关注'}}
                             </view>
                         </view>
                         <view class="title">{{item.momentsContent}}</view>
