--- a/pages/to-ladder/step-three/step-three.wxml
+++ b/pages/to-ladder/step-three/step-three.wxml
@@ -24,7 +24,7 @@
         </view>
     </view>
     <view class="flex-center">
-        <view class="defaultBtn">下一步</view>
+        <view class="defaultBtn" bindtap="submit">下一步</view>
     </view>
 
 <!--    技能等级-->
@@ -34,7 +34,7 @@
             <view class="flex-box flex-space flex-y-center skill-title">
                 <image src="../../../images/icon/cancel2.png" class="cancel" bindtap="closeModal"></image>
                 <view style="font-weight:700">选择技能等级</view>
-                <view class="sure" bindtap="closeModal" data-choose="choose">确定</view>
+                <view class="sure" bindtap="closeModal" data-choose="chooseSkillLeave">确定</view>
             </view>
             <view>
                 <view class="list-block {{currentIndex==index?'active':''}}" wx:for="{{list}}" wx:key="index" bindtap="selectSkill" data-idx="{{index}}">
@@ -46,13 +46,15 @@
             </view>
         </view>
     </view>
-    <view class="skillLeave" wx:if="{{!showOrderTimeModal}}" >
+
+    <!--选择时间段-->
+    <view class="skillLeave" wx:if="{{showOrderTimeModal}}" >
         <view class="modal"></view>
         <view class="content">
             <view class="flex-box flex-space flex-y-center skill-title">
                 <image src="../../../images/icon/cancel2.png" class="cancel" bindtap="closeModal"></image>
                 <view style="font-weight:700">选择接单时间</view>
-                <view class="sure" bindtap="closeModal" data-choose="choose">确定</view>
+                <view class="sure" bindtap="closeModal" data-choose="chooseTime">确定</view>
             </view>
             <view class="time-list flex-box">
                 <view class="time-head flex-box flex-y-center" bindtap="chooseTimeTum" data-cur="1">
@@ -61,24 +63,24 @@
                 </view>
                 <view class="time-head flex-box flex-y-center" bindtap="chooseTimeTum" data-cur="2">
                     <image src="{{certainTimesIndex==2?'../../../images/icon/circle2.png':'../../../images/icon/circle.png'}}" class="icon"></image>
-                    <view>全部时间段</view>
+                    <view>按周</view>
                 </view>
             </view>
-            <view class="weak-list">
+            <view class="weak-list" wx:if="{{certainTimesIndex==2}}">
                 <view class="week-item {{item.selected?'week-item-active':'week-item-normal'}}"  wx:for="{{weekList}}" wx:key="index" data-week="{{index}}" bindtap="chooseWeekItem">
                     {{item.name}}
                 </view>
             </view>
-            <view class="foot-time">
+            <view class="foot-time" wx:if="{{certainTimesIndex==2}}">
                 <view>选择时间段（举例 19:00 至 21:00）</view>
                 <view class="flex-box flex-space" style="width:90%;margin:0 auto;">
-                    <picker-view indicator-style="height: 40px;" style="width: 200rpx; height:200px;" indicator-class="picker-style">
+                    <picker-view  bindchange="getTimer" indicator-style="height: 40px;" style="width: 200rpx; height:200px;" indicator-class="picker-style">
                         <picker-view-column>
                             <view wx:for="{{hour}}" wx:key="years" style="line-height: 50px; text-align: center;">{{item}}</view>
                         </picker-view-column>
                     </picker-view>
                     <view style="align-self:center">至</view>
-                    <picker-view indicator-style="height: 40px;" style="width: 200rpx; height:200px;" indicator-class="picker-style">
+                    <picker-view bindchange="getTimer2"  indicator-style="height: 40px;" style="width: 200rpx; height:200px;" indicator-class="picker-style">
                         <picker-view-column>
                             <view wx:for="{{hour}}" wx:key="years" style="line-height: 50px; text-align: center;">{{item}}</view>
                         </picker-view-column>
@@ -87,6 +89,23 @@
                 </view>
 
             </view>
+        </view>
+    </view>
+    <!--选择技能-->
+    <view class="skillLeave" wx:if="{{!showOrderTimeModal}}" >
+        <view class="modal"></view>
+        <view class="content">
+            <view class="flex-box flex-space flex-y-center skill-title">
+                <image src="../../../images/icon/cancel2.png" class="cancel" bindtap="closeModal"></image>
+                <view style="font-weight:700">擅长技能</view>
+                <view class="sure" bindtap="closeModal" data-choose="chooseTime">确定</view>
+            </view>
+            <view class="weak-list" >
+                <view class="week-item {{item.selected?'week-item-active':'week-item-normal'}}"  wx:for="{{skillList}}" wx:key="index" data-week="{{index}}" bindtap="chooseSkillList">
+                    {{item.name}}
+                </view>
+            </view>
+
         </view>
     </view>
 </view>
